--- a/vcu_compiler/.vscode/settings.json
+++ b/vcu_compiler/.vscode/settings.json
@@ -55,5 +55,8 @@
   "[python]": {
     "editor.defaultFormatter": "ms-python.autopep8"
   },
-  "python.formatting.provider": "none"
+  "python.formatting.provider": "none",
+  "files.watcherExclude": {
+    "**/target": true
+  }
 }
